kubernetes/downloads/sonarr-anime/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-anime
  namespace: downloads
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "sonarr-anime.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr-anime
          port: 8989
